# qtryout

./: CMakeLists.txt  README.md  example-api-call.txt  main.cpp  main.qml  mistakes.txt  qml.qrc  report.odt  weather_api.cpp  weather_api.h
